[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elabs"
version = "0.1.0"
description = "Python module for circuit design, simulation, and visualization."
authors = [
  { name="ELabs Team", email="support@elabs.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/elabs-team/elabs"
Repository = "https://github.com/elabs-team/elabs"
